chore: remove unused dependency